# valio

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
valio/: __init__.py
valio/descriptor/: __init__.py  descriptors.py
valio/error/: __init__.py  errors.py
valio/field/: __init__.py  fields.py
valio/logger/: __init__.py  color_format.py  loggers.py
valio/regexer/: __init__.py  regexps.py
valio/regexer/relib/: __init__.py  aadhaarcard.py  colors.py  control_chars.py  dates.py  emails.py  ipaddresses.py  pancard.py  patterns.py  paymentcards.py  special_chars.py
valio/regexer/tests/: __init__.py  regex_test.py
valio/schema/: __init__.py  schemas.py  schemas_v2.py
valio/tests/descriptor/: __init__.py  test_descriptors.py
valio/tests/validator/: test_validators.py
valio/validator/: __init__.py  validators.py
